[package]
name = 'xy'
version = '0.0.0'
authors = ['Matthias Fauconneau <matthias.fauconneau@gmail.com>']
edition = '2018'

[lib]
path = 'lib.rs'

[features]
iter = ['vector/array']
zero = ['vector/num','num']
default = ['iter','zero']

[dependencies]
num = { path = '../num', optional = true }
vector = { path = '../vector' }
