[package]
name= 'xy'
version= '0.0.0'
authors= ['Matthias Fauconneau <matthias.fauconneau@gmail.com>']
edition= '2018'

[dependencies]
num= {git='https://github.com/Matthias-Fauconneau/num', optional=true}
vector= {git='https://github.com/Matthias-Fauconneau/vector'}

[features]
zero = ['vector/num','num']
default = ['zero']

[lib]
path = 'lib.rs'
